# SOMS-AI

./: ANALYSIS_ERRORS_AND_FIXES.md  README.md  SOMS.desktop  __init__.py  agent.py  architect.py  auditor.py  chat_history.py  cleaner.py  cli.py  config_manager.py  constants.py  demonstrator.py  diagnostician.py  engineer.py  evolver.py  forecasting.py  growth.py  gui.py  gui_sudo.py  improver.py  index.html  llm_client.py  main.py  memory.py  model_manager.py  opencode.json  orchestrator.py  package_architect.py  persona.py  pyproject.toml  requirements.txt  self_heal.py  sentinel.py  setup.py  skills.py
